# rgd-pi0

./: .gitignore  .gitmodules  NOTICE  README.md  meson.build  meson.options
config/: README.md  cuts.json  runs.json
config/binning/: grid_A_q2_xb.json  grid_B_z_pt2.json
config/farm/: Cu.farm.json  CxC.farm.json  LD2.farm.json  Sn.farm.json
data/Vz/: vz_corrector_params.txt
meson/: native-macos.ini
note/: .gitignore  README.md  main.typ
note/sections/: 01_introduction.typ  02_dataset.typ  03_event_selection.typ  04_pi0_reconstruction.typ  05_binning.typ  06_background.typ  07_multiplicity_ratio.typ  08_pt_broadening.typ  09_bsa.typ  10_systematics.typ  11_results.typ  12_summary.typ  99_appendix.typ
note/template/: callouts.typ  figures.typ  glossary.typ  lib.typ  refs.typ  tables.typ  theme.typ
python/: README.md  pyproject.toml
python/pi0/: __init__.py  batch.py  broadening.py  bsa.py  config.py  extract.py  farm.py  io.py  local_batch.py  plots_kinematics.py  plots_results.py  plots_selection.py  progress.py  qa.py  ratio.py
python/tests/: test_extract.py  test_farm.py  test_io.py  test_progress.py
src/config/: Cuts.cpp  Cuts.hpp
src/core/: Binning.cpp  Binning.hpp  Constants.hpp  Kinematics.cpp  Kinematics.hpp  Pairing.cpp  Pairing.hpp  Summation.hpp  Types.hpp
src/photonid/: Features.cpp  Features.hpp  PhotonGBT.cpp  PhotonGBT.hpp  RunRangeModelMap.cpp  RunRangeModelMap.hpp
src/photonid/models/: PROVENANCE.md  RGA_inbending_pass1.hpp  RGA_inbending_pass2.hpp  RGA_outbending_pass1.hpp  RGA_outbending_pass2.hpp  RGC_Summer2022_pass1.hpp
src/selection/: ElectronSelection.cpp  ElectronSelection.hpp  PhotonSelection.cpp  PhotonSelection.hpp  SamplingFraction.cpp  SamplingFraction.hpp
src/stageA_skim/: main.cxx  meson.build
src/stageB_bin/: DonorPool.cpp  DonorPool.hpp  InputChain.hpp  PoolGrid.cpp  PoolGrid.hpp  main.cxx  meson.build
src/tools/: dump_columns.cxx  meson.build
src/tools/make_grid/: main.cxx  meson.build
src/util/: Progress.hpp  Provenance.hpp  Sha256.hpp
src/vertex/: VzCorrector.cpp  VzCorrector.hpp
tests/: meson.build  test_binning.cpp  test_core.cpp  test_donorpool.cpp  test_inputchain.cpp  test_photonid.cpp  test_progress.cpp  test_selection.cpp  test_summation.cpp  test_vertex.cpp
